--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -11,11 +11,11 @@
         <div class="navbar">
            <h2>Xhuynh.</h2>
             <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">SKILLS</a></li>
-                <li><a href="#">MY WORKS</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="education">SKILLS</a></li>
+                <li><a href="interests.html">MY WORKS</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </div>
 
